# CpBadCppGood

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/NekoChxn/: ApiResponse.hpp  CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  base64.hpp  hash.hpp  main.cpp  string_helpers.hpp  uri_encode.hpp
